--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
 	<link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 <body ng-app="ads" >
-	<div class="container">
-    </div>
 	<!--  homepage Start -->
-    <div class="row">
-	    <div class="col-md-2" id="registerLogin">
+	<div class="row headerTitle">
+	<h3>ADS - Home</h3>
+	</div>
+    <div class="row homepage">
+	    <div class="col-md-2 panel">
 	        <div class="form-group">
-	            <div class="col-lg-2">
-
-	            </div>
-	            <div class="col-lg-10">
+	            <div class="col-lg-12">
 	                <p>To publish a new ad, please login.</p>
 	                <a href="#/login">
-	                    <button class="btn btn-primary" id="login">Login</button>
+	                    <button id="login">Login</button>
 	                </a>
 	                <br/>
 	                <br/>
 	                <a href="#/register">
-	                    <button class="btn btn-primary" id="register">Register</button>
+	                    <button id="register">Register</button>
 	                </a>
 
 	            </div>
