--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,13 @@
 	<script src="lib/angular/angular-resource.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/services/adsData.js"></script>
-	<script src="js/controllers/AllAds.js"></script>
+	<script src="js/controllers/HomeCtrl.js"></script>
 	<script src="js/controllers/Register.js"></script>
 	<script src="js/controllers/Login.js"></script>
+	<script src="js/directives/filters.js"></script>
+	<script src="js/directives/leftSidebar.js"></script>
+	<script src="js/directives/publicAds.js"></script>
+	<script src="js/directives/login.js"></script>
+
 </body>
 </html>
