--- a/app/index.html
+++ b/app/index.html
@@ -7,20 +7,25 @@
 	<link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 <body ng-app="ads" >
-    <div ng-view></div>
-
+    <ng-view></ng-view>
+    <footer >
+		<h3 class="col-md-12">ADS - Login</h3>
+	</footer>
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.js"></script>
 	<script src="lib/angular/angular-resource.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/services/adsData.js"></script>
+	<script src="js/services/townsData.js"></script>
+	<script src="js/services/categotyData.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
-	<script src="js/controllers/Register.js"></script>
-	<script src="js/controllers/Login.js"></script>
+	<script src="js/controllers/LoginCtrl.js"></script>
+	<script src="js/controllers/RegisterCtrl.js"></script>
 	<script src="js/directives/filters.js"></script>
 	<script src="js/directives/leftSidebar.js"></script>
 	<script src="js/directives/publicAds.js"></script>
 	<script src="js/directives/login.js"></script>
+	<script src="js/directives/register.js"></script>
 
 </body>
 </html>
