--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,13 @@
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.js"></script>
 	<script src="lib/angular/angular-resource.js"></script>
+	<script src="lib/angular-local-storage-master/dist/angular-local-storage.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/services/adsData.js"></script>
 	<script src="js/services/townsData.js"></script>
-	<script src="js/services/categotyData.js"></script>
+	<script src="js/services/categoryData.js"></script>
+	<script src="js/services/UserData.js"></script>
+	<script src="js/services/authentication.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
 	<script src="js/controllers/LoginCtrl.js"></script>
 	<script src="js/controllers/RegisterCtrl.js"></script>
