add is loggedIn checker

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 	<script src="js/controllers/RegisterCtrl.js"></script>
 	<script src="js/directives/filters.js"></script>
 	<script src="js/directives/leftSidebar.js"></script>
+	<script src="js/directives/leftNaviBar.js"></script>
 	<script src="js/directives/publicAds.js"></script>
 	<script src="js/directives/login.js"></script>
 	<script src="js/directives/register.js"></script>
