create publish new ad, try to show user ads

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 	<script src="js/controllers/LoginCtrl.js"></script>
 	<script src="js/controllers/RegisterCtrl.js"></script>
 	<script src="js/controllers/PublishCtrl.js"></script>
+	<script src="js/controllers/UserAdsCtrl.js"></script>
 	<script src="js/directives/filters.js"></script>
 	<script src="js/directives/leftSidebar.js"></script>
 	<script src="js/directives/leftNaviBar.js"></script>
@@ -33,6 +34,7 @@
 	<script src="js/directives/login.js"></script>
 	<script src="js/directives/register.js"></script>
 	<script src="js/directives/publishAd.js"></script>
+	<script src="js/directives/userAds.js"></script>
 
 </body>
 </html>
