--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 <body ng-app="ads" >
     <ng-view></ng-view>
     <footer >
-		<h3 class="col-md-12">ADS - Login</h3>
+		<h3 class="col-md-12">2014 by Software University Foundation, No Rights Reserved</h3>
 	</footer>
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.js"></script>
