create edit profile page

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 	<script src="js/controllers/RegisterCtrl.js"></script>
 	<script src="js/controllers/PublishCtrl.js"></script>
 	<script src="js/controllers/UserAdsCtrl.js"></script>
+	<script src="js/controllers/EditUserCtrl.js"></script>
 	<script src="js/directives/filters.js"></script>
 	<script src="js/directives/leftSidebar.js"></script>
 	<script src="js/directives/leftNaviBar.js"></script>
@@ -35,6 +36,7 @@
 	<script src="js/directives/register.js"></script>
 	<script src="js/directives/publishAd.js"></script>
 	<script src="js/directives/userAds.js"></script>
+	<script src="js/directives/editUser.js"></script>
 
 </body>
 </html>
